# samp-log

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  appveyor.yml  log-plugin.inc.in  pawn.json
src/: CLogManager.cpp  CLogManager.hpp  CMakeLists.txt  LogManager.cpp  LogManager.hpp  PluginLog.cpp  PluginLog.hpp  ServerLogHook.cpp  ServerLogHook.hpp  Singleton.hpp  main.cpp  natives.cpp  natives.hpp  plugin.def  version.hpp.in
